--- a/Source/COFRSCoreInstaller/Common/Windows/COFRSNewProjectDialog.xaml
+++ b/Source/COFRSCoreInstaller/Common/Windows/COFRSNewProjectDialog.xaml
@@ -9,10 +9,10 @@
              WindowStyle="ToolWindow" Title="COFRS REST Service (.NET Core)" >
     <ui:DialogWindow.Resources>
         <Style TargetType="{x:Type Grid}">
-            <Setter Property="Background" Value="{DynamicResource {x:Static vsui:VsBrushes.EnvironmentBackgroundKey}}" />
+            <Setter Property="Background" Value="{DynamicResource {x:Static vsui:VsBrushes.ToolboxBackgroundKey}}" />
         </Style>
         <Style TargetType="{x:Type TextBlock}">
-            <Setter Property="Background" Value="{DynamicResource {x:Static vsui:VsBrushes.EnvironmentBackgroundKey}}" />
+            <Setter Property="Background" Value="{DynamicResource {x:Static vsui:VsBrushes.ToolboxBackgroundKey}}" />
             <Setter Property="Foreground" Value="{DynamicResource {x:Static vsui:VsBrushes.ToolWindowTextKey}}" />
         </Style>
     </ui:DialogWindow.Resources>
